# Cladewright

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  Dockerfile.pipeline  conftest.py  manage.py  pyproject.toml  requirements-pipeline.txt  requirements.txt
backend/apps/accounts/: README.md  admin.py  apps.py  models.py  signals.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_configure_site.py  0002_initial.py  0003_backfill_profiles.py
backend/apps/clash/: admin.py  apps.py  consumers.py  distance.py  matchmaking.py  models.py  pools.py  referee.py  results.py  routing.py  runtime.py  store.py  tests.py  tokens.py  urls.py  views.py
backend/apps/clash/migrations/: 0001_initial.py
backend/apps/content/: admin.py  models.py  urls.py  views.py
backend/apps/content/migrations/: 0001_initial.py  0002_seed_faq.py
backend/apps/gamedata/: admin.py  apps.py  membership.py  models.py  tasks.py  tests.py  urls.py  views.py
backend/apps/gamedata/migrations/: 0001_initial.py  0002_alias_trigram.py  0003_assetversion_label_assetversion_pool_size_extant.py  0004_pipelinejob.py  0005_pipelinejob_kind_alter_pipelinejob_scope_filter_and_more.py  0006_pipelinejob_delete_old.py  0007_manualalias.py  0008_taxonnode_pool_count_extant.py  0009_alias_fame_taxontip_fame.py  0010_assetversion_notable_count.py  0011_pipelinejob_fame_dump_pipelinejob_frontier_rank_and_more.py  0012_assetversion_frontier_rank.py  0013_assetversion_membership_filter.py  0014_pipelinejob_fame_month_pipelinejob_fame_year_and_more.py  0015_dumpartifact_packset_pipelinejob_dump_path_and_more.py  0015_pipelinejob_fame_source.py  0016_pipelinejob_backfill_force_pipelinejob_backfill_only_and_more.py
backend/apps/scores/: admin.py  models.py  multipliers.py  named_set.py  scoring.py  sessions.py  tests.py  urls.py  views.py
backend/apps/scores/migrations/: 0001_initial.py  0002_remove_run_scores_run_mode_400882_idx_run_scope_and_more.py  0003_namedspecies_playerstat.py  0004_remove_run_scores_run_mode_f069d0_idx_run_difficulty_and_more.py  0005_gamemodeconfig.py  0006_seed_game_modes.py  0007_alter_gamemodeconfig_blurb.py  0008_marathon_blurb.py  0009_run_ranked.py  0010_remove_namedspecies_uniq_user_mode_species_and_more.py  0011_dailypin_dailyrotationentry.py  0012_enable_daily.py  (+18 more)
backend/cladewright/: __init__.py  asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
backend/pipeline/: README.md  __init__.py  asset.py  backbone.py  backfill.py  enrich.py  ids.py  ingest.py  paraphyletic.py  pool.py  types.py  validate.py
backend/scripts/: build_braidworks_wheels.sh  build_mammalia_braidworks.py  build_starter_scopes.sh  fetch_clb_coldp.py  fetch_col_dump.sh
backend/templates/admin/: base_site.html  pipelinejob_purge_confirm.html
backend/tests/: test_gamedata_admin.py  test_gamedata_views.py  test_membership.py  test_pageviews_job.py  test_pipeline.py
(+127 files in other folders)
