[project]
name = "cladewright-backend"
version = "0.0.0"
description = "Cladewright backend: serves the game-data asset, accounts, scores."
requires-python = ">=3.12"
dependencies = [
    "django>=6.0,<6.1",
    "djangorestframework>=3.15",
    "django-allauth[socialaccount]>=0.63",
    "django-cors-headers>=4.4",
    "psycopg[binary]>=3.1",   # Postgres driver (prod + local)
    "dj-database-url>=2.2",   # DATABASE_URL parsing
    "gunicorn>=22.0",         # WSGI server (docker)
    "celery[redis]>=5.4",     # pipeline job queue (web enqueues, worker consumes)
    "whitenoise>=6.6",        # static (admin CSS) behind gunicorn, no nginx
]

# ColDP ingest lives in the in-repo backend/pipeline/ package (no external ingest dep).
# The pipeline's only external dependency is Braidworks (enrichment), pinned from GitHub in
# requirements-pipeline.txt and installed only on the worker — NOT needed to serve requests.
# See backend/pipeline/README.md.
[project.optional-dependencies]
pipeline = [
    # braidworks-core + the weavers — pinned in requirements-pipeline.txt (GitHub tag).
]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-django>=4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# One-off data-exploration scripts intentionally interleave imports with top-level code.
"scripts/*" = ["E402"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cladewright.settings"
python_files = "test_*.py"
